# bazel_awscli_test

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  awscli_v1.yaml  awscli_v2.yaml
